--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=627febc1693dbff48776490bf4ef5a93"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=627febc1693dbff48776490bf4ef5a93&libraries=services"></script>
     <title>React App</title>
   </head>
   <body>
